#737: correct UT following ChromiumCapabilities creation